# bookjibe

./: .gitignore  LICENSE  README.md  mybook2.json  mybook2.txt  pyproject.toml
bookjibe/: llm.py  settings.py  utils.py  writer.py
bookjibe/ui/: app.py  app2.py  book_creator.py  book_initializer.py  component.py  prompt_generator.py
books/: roman_enfant_8ans_8.json
init_prompts/french/: roman_enfant_8ans_prompt.txt  roman_enfant_8ans_specifications.txt  romance_revolution_francaise_prompt.txt  romance_revolution_francaise_specifications.txt
prompt_generators/french/: prompt_generator.txt
tests/: test_writer.py
